[package]
name = "godot-mun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
godot = { git = "https://github.com/sayaks/gdextension", branch = "hack/mun-patch" }
mun_runtime = "0.4.0"
once_cell = "1.17.1"
regex = "1.7.2"

[lib]
crate-type = ["cdylib"]
